chore(tests/docs): improve forge test flow and restore legacy javadoc URL compatibility
Alternative (more detailed):
chore: move Java checks after PHP tests, add package smoke checks, and add javadoc allclasses-frame redirect for JDK17+